--- a/app/src/main/res/layout/layout_item_task.xml
+++ b/app/src/main/res/layout/layout_item_task.xml
@@ -19,26 +19,28 @@
             android:layout_height="wrap_content"
             android:background="@drawable/bg_layout_task_item">
 
-            <CheckBox
-                android:id="@+id/isEnabledCheckbox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:visibility="gone" />
-
             <LinearLayout
                 android:id="@+id/taskLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@id/isEnabledCheckbox"
                 android:orientation="vertical">
+<!--android:layout_toEndOf="@id/dateTextvieww"-->
+
+                <TextView
+                    android:id="@+id/dateTextvieww"
+                    android:layout_width="match_parent"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="27 Aug - 28 Aug" />
 
                 <TextView
                     android:id="@+id/titleTextview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="5dp"
                     android:gravity="center_vertical"
                     android:padding="10dp"
                     android:text="Title"
@@ -65,10 +67,10 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/category_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
-                    android:id="@+id/category_textview"
                     android:maxLength="3"
                     android:text="Imp"
                     android:textColor="@color/darkBlue" />
@@ -84,9 +86,16 @@
                     android:id="@+id/completedImage"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:visibility="gone"
                     android:layout_marginHorizontal="10dp"
-                    android:src="@drawable/ic_baseline_check_circle_24" />
+                    android:src="@drawable/ic_baseline_check_circle_24"
+                    android:visibility="gone" />
+
+                <ImageView
+                    android:id="@+id/pendingImage"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:src="@drawable/ic_baseline_access_time_red_24" />
 
             </LinearLayout>
 
@@ -94,15 +103,15 @@
 
 
         <TextView
+            android:id="@+id/description_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/description_textview"
-            android:visibility="gone"
             android:layout_below="@id/toplayoutlayot"
             android:layout_marginTop="5dp"
-            android:text="ImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImp"
             android:paddingHorizontal="10dp"
-            android:textColor="@color/darkBlue" />
+            android:text="ImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImpImp"
+            android:textColor="@color/darkBlue"
+            android:visibility="gone" />
 
     </RelativeLayout>
 
